<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_title"
        android:layout_marginTop="30dp"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_description"
        android:layout_marginTop="16dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:layout_marginTop="16dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_data_button"
        android:layout_marginTop="16dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_button"
        android:layout_marginTop="16dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDeleteDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_description_button"
        android:layout_marginTop="16dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_note_button"
        android:layout_marginTop="16dp"
        />
    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        />

</androidx.appcompat.widget.LinearLayoutCompat>